--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
             <ul class="footer-list">
                 <li>
-                    <h3 class="footer-text">Redes Sociais</h3>
+                    <h3 class="footer-text">Social</h3>
                 </li>
                 <li>
                     <a href="#" class="footer-link">Site MedTempo</a>
@@ -409,9 +409,12 @@
             </ul>
 
             <div id="footer_subscribe">
-                <h3 class="footer-text">Para Desenvolvedores</h3>
-
-                <p>Código-fonte</p>
+                <h3 class="footer-text">Repositório</h3>
+                <ul class="footer-list">
+                    <li>
+                        <a href="https://github.com/MedTempo/MedTempo-SITE" target="_blank" class="footer-link">GitHub - MedTempo</a>
+                    </li>
+                </ul>
             </div>
         </div>
 
