--- a/index.html
+++ b/index.html
@@ -408,17 +408,17 @@
                 </li>
             </ul>
 
-            <div id="footer_subscribe">
-                <h3 class="footer-text">Repositório</h3>
-                <ul class="footer-list">
-                    <li>
-                        <a href="https://github.com/MedTempo/MedTempo-SITE" target="_blank" class="footer-link">GitHub - MedTempo</a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="footer-list">
+                <li>
+                    <h3 class="footer-text">Repositório</h3>
+                </li>
+                <li>
+                    <a href="https://github.com/MedTempo/MedTempo-SITE" class="footer-link">GitHub - MedTempo</a>
+                </li>
+            </ul>
         </div>
 
-        <div id="footer_copyright">&#169 2023 todos os direitos reservados</div>
+        <div id="footer_copyright">Copyright &#169 2023 Felipe Chiozzotto, Heloísa Real, Juliana Sandes, Mateus Vieira, Thiago Soares</div>
     </footer>
     <!-- Portfolio Modals-->
     <!-- Portfolio item 1 modal popup-->
