--- a/index.html
+++ b/index.html
@@ -235,9 +235,7 @@
                         <p class="text-muted">Back-end e DevOps</p>
                         <a class="btn btn-dark btn-social mx-2" href="https://github.com/habdig7oficial" target="_blank" aria-label="Parveen Anand Twitter Profile"><i
                                 class="fab fa-github"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i
-                                class="fa-brands fa-instagram"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/habdig7-oficial-3b9a9424a/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" aria-label="Parveen Anand LinkedIn Profile"><i
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
@@ -277,8 +275,6 @@
                                 aria-label="Larry Parker Twitter Profile"><i class="fab fa-github"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/nusfelipe?igshid=bDFxNHR6aXIyYjN0&utm_source=qr" target="_blank"
                                 aria-label="Larry Parker Facebook Profile"><i class="fa-brands fa-instagram"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"
-                                aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
