--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
                     </div>
                 </li>
                 <li class="timeline-inverted">
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="Fianlização" /></div>
+                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="Finalização" /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4>Novembro, 2023</h4>
-                            <h4 class="subheading">Fianlização</h4>
+                            <h4 class="subheading">Finalização</h4>
                         </div>
                         <div class="timeline-body"><p class="text-muted">Nossa apresentação final do TCC.</p></div>
                     </div>
