--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/5.jpg" alt="Thiago" />
                             <h4>Thiago Baptista Soares</h4>
                             <p class="text-muted">Front-end e Negócios</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/thiagobapsoares" target="_blank" 
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/thibapso" target="_blank" 
                                 aria-label="Larry Parker Twitter Profile"><i class="fab fa-github"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/th_bapsoares?igshid=NzZlODBkYWE4Ng==" target="_blank" 
                                 aria-label="Larry Parker Facebook Profile"><i class="fa-brands fa-instagram"></i></a>
